17851
The following function definition with a one legged if

{noformat}
object Test {
  def f : Int = if (true) {val x = 22}
}
{noformat}

yields two errors instead of one

{noformat}
Test.scala:2: error: type mismatch;
 found   : Unit
 required: Int
  def f : Int = if (true) {val x = 22}
                                     ^
Test.scala:2: error: type mismatch;
 found   : Unit
 required: Int
  def f : Int = if (true) {val x = 22}
                ^
{noformat}
